[package]
name = "ovpn-importer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
nom = "7.1.3"
strum = { version = "0.26.3", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tuple-conv = "1.0.1"

[[bin]]
name = "ovpn_importer"
path = "src/main.rs"
